# site-ranker

./: .gitignore  pyproject.toml  requirements.txt
GTR-based-ranking/: .env.example  .gitignore  GTR Domain Activity & Coverage Intelligence System (DACIS_).docx  README.md  app.py  config.py  domain_checker.py  run.sh  sample_data.parquet
GTR-based-ranking/scripts/: check_online_status.py  http_content_check.py
src/: __init__.py  config.py
src/collectors/: base.py  google_transparency.py  site_scraper.py  telegram.py  tranco.py
src/features/: pipeline.py  schema.py  transforms.py
src/filters/: content_classifier.py
src/models/: __init__.py  tier_classifier.py  tier_classifier_v2.py  traffic_predictor.py
src/utils/: __init__.py  domain_utils.py  rate_limiter.py
